force-app/main/default/objects/Test_Object__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
                <isActive>false</isActive>
                <label>Hyderabad</label>
            </value>
            <value>
                <fullName>Jaipur</fullName>
                <isActive>false</isActive>
                <label>Jaipur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>