force-app/main/default/objects/Test_Object__c/fields/Column_C__c.field-meta.xml
<CustomField>
    <fullName>Column_C__c</fullName>
    <label>Column C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>