force-app/main/default/objects/Test_Object__c/fields/DatatableParentId__c.field-meta.xml
<CustomField>
    <fullName>DatatableParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Objects</relationshipLabel>
    <relationshipName>Test_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>