force-app/main/default/objects/Test_Object__c/fields/Form_Table_Metadata_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_Table_Metadata_Id__c</fullName>
    <label>Form Table Metadata Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>