force-app/main/default/objects/Test_Object__c/fields/Metadata_Record_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Record_Developer_Name__c</fullName>
    <label>Metadata Record Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>