force-app/main/default/objects/Test_Object__c/fields/MultiSelect__c.field-meta.xml
<CustomField>
    <fullName>MultiSelect__c</fullName>
    <label>MultiSelect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>