force-app/main/default/objects/Test_Object__c/fields/Test_Formula__c.field-meta.xml
<CustomField>
    <fullName>Test_Formula__c</fullName>
    <formula>$User.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Formula</label>
    <type>Text</type>
</CustomField>