force-app/main/default/objects/Test_Object__c/recordTypes/First_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>First_Record_Type</fullName>
    <active>true</active>
    <label>First Record Type</label>
</RecordType>