force-app/main/default/objects/Test_Object__c/recordTypes/Second_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Second_Record_Type</fullName>
    <active>true</active>
    <label>Second Record Type</label>
</RecordType>